# security-control-rag

./: .env.example  .gitignore  AGENT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  business-context.md  codes prompt.txt  quality-gates.md
docs/decisions/: 0001-initial-stack.md
docs/runbooks/: complete-assessment-graphrag-goal.md
scripts/: audit_complete_assessment_workflow.py  ingest_graphrag.py  setup_ollama.ps1
src/app/: __init__.py  config.py  main.py  pipeline.py  quality_gates.py  schemas.py
src/app/assessment/: __init__.py  findings.py  mock_data.py  prompts.py  sanitizer.py  schemas.py  token_estimator.py  workflow.py
src/app/evaluation/: __init__.py  logger.py
src/app/generation/: clients.py  prompts.py  structured.py
src/app/graph/: __init__.py  extractor.py  store.py
src/app/ingestion/: __init__.py  chunker.py
src/app/planning/: __init__.py  planner.py
src/app/retrieval/: __init__.py  bm25.py  evidence_packet.py  graph_context.py  hybrid.py  vector_store.py
src/app/static/: foundation_mock.html  foundation_packet_editor.html  foundation_questionnaire_editor.html
src/app/workflows/: __init__.py  complete_assessment.py  job_manager.py  risk_chain.py  run_store.py  step_audit.py
src/secure_rag/: __init__.py  api.py  chunking.py  cli.py  embeddings.py  engine.py  indexer.py  llm.py  loaders.py  prompts.py  retriever.py  runtime.py  schema.py  vector_store.py
standards/: SOURCES.md
tests/: test_api.py  test_chunking.py  test_complete_assessment_workflow.py  test_engine.py  test_evidence_packet.py  test_foundation_assessment.py  test_foundation_mock_ui.py  test_graph_context.py  test_graphrag_api.py  test_graphrag_graph.py  test_graphrag_planner.py  test_graphrag_retrieval.py  test_indexer.py  test_loaders.py  test_ollama_llm.py  test_prompts.py  test_qdrant_ids.py  test_quality_gates.py  test_retrieval.py  test_retriever.py  test_risk_chain.py  test_runtime.py  test_structured_generation.py  test_workflow_step_audit.py
tests/fixtures/: security_controls.csv
(+1 files in other folders)
