[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-control-rag"
version = "0.1.0"
description = "Local RAG service for information-security control recommendations from a private corpus."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "fastapi>=0.115.0",
  "neo4j>=5.20.0",
  "openai>=1.40.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "qdrant-client>=1.9.0",
  "rank-bm25>=0.2.2",
  "pyyaml>=6.0.0",
  "openpyxl>=3.1.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
security-rag = "secure_rag.cli:main"
security-rag-api = "secure_rag.api:main"
grc-graphrag-api = "app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secure_rag = ["static/*"]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
